# charta

./: README.md  build_and_deploy.sh  setup.cfg
charta/: client.py  example.py  server.py
charta/static/: dashboard.js  index.html  style.css
examples/: basic.py  example.py
src/: client.py  example.py  server.py
src/static/: dashboard.js  index.html  main.js  style.css
