[metadata]
# replace with your username:
name = charta
version = 0.0a1
author = Patrick Varin
author_email = patrickjvarin@gmail.com
description = A package for building realtime dashboards. Originally designed for monitoring the progress of optimization problems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pvarin/charta
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: BSD License
	Development Status :: 2 - Pre-Alpha
	Operating System :: OS Independent

[options]
package_dir =
	= src
packages = find:
python_requires = >=3.6
install_requires =
	zmq
	pyzmq
	tornado
	numpy

[options.packages.find]
where = src
